# gb_drf

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/config/: .env.dist
backend/config/settings/: base.py  debug.py  debug_pg.py  production.py
backend/data/test_data/: test_users.json
backend/scripts/: backend-init.sh  database-init.sh
backend/todoapp/: filters.py  graphql.py  models.py  serializers.py  tests.py  views.py
backend/userapp/: models.py  views.py
backend/userapp/management/commands/: make_users_and_groups.py
config/: .env.dist  settings.py  urls.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/public/: index.html
frontend/public/js/: fontawesome.5f783f9e68.js
frontend/src/: App.js  LoginForm.js  index.css
frontend/src/components/: Footer.js  Header.js  Menu.js  NotFound404.js  Project.js  ProjectEditForm.js  ProjectForm.js  SearchBar.js  ToDo.js  ToDoForm.js  User.js
nginx/: nginx.conf
todoapp/: models.py  serializers.py  tests.py  views.py
todoapp/fixtures/: project.json  todo.json
todoapp/management/commands/: make_projects.py  make_todos.py
todoapp/migrations/: 0001_initial.py  0002_initial.py
userapp/: admin.py  models.py  serializers.py  tests.py  views.py
userapp/management/commands/: make_users.py
userapp/migrations/: 0001_initial.py
